# mclocalizer

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml
mclocalizer/: __main__.py  base.py  bug.py  change_explorer.py  cli.py  commit_filter.py  explorer.py  extension.py  file_filter.py  filters.py  find_bug_scope.py  inspection.py  mclocalizer.py  report.py  target.py
