[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mclocalizer"]

[project]
name = "mclocalizer"
version = "1.0.0-alpha"
authors = [
    {name="Jakub Kasprzak"},
]
description = "Tool for detecting what is notoriously broken in software repository."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = [
    "dependencies", 
    "optional-dependencies",
]

[project.urls]
Homepage = "https://github.com/jkbkasprzak/mclocalizer"
Issues = "https://github.com/jkbkasprzak/mclocalizer/issues"

[project.scripts]
mclocalizer = "mclocalizer.cli:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[tool.black]
    line-length = 88
    target-version = ["py311"]

[tool.isort]
    line_length = 88
    profile = "black"
